translation-tool/inputs/source_meta/objects/HSvc_KB_Exit_Code__c.object
<CustomObject>
    <fields>
        <fullName>Case_Record_Type__c</fullName>
        <label>Case Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>B2B General Case</fullName>
                </value>
                <value>
                    <fullName>B2C General Case</fullName>
                </value>
                <value>
                    <fullName>Office Only</fullName>
                </value>
                <value>
                    <fullName>Repair Work Order</fullName>
                </value>
                <value>
                    <fullName>Install Work Order</fullName>
                </value>
                <value>
                    <fullName>RMA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>Date when the KB Exit code is valid. Same as Effective Date field on Resolution Code Data Admin object</description>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <description>Date when the KB Exit code is invalid. Same as Expiry Date field on Resolution Code Data Admin object</description>
        <label>Expiry Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
	<fields>
        <fullName>Hsvc_KBExitCodeDescriptionArgentina__c</fullName>
        <label>KB Exit Code Description(Argentina)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_KBExitCodeDescriptionPanama__c</fullName>
        <label>KB Exit Code Description(Panama)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KB_Exit_Code_Description__c</fullName>
        <formula>CASE($Label.Current_Language_Key,&apos;es_CO&apos;, IF(ISBLANK(KB_Exit_Code_Description_esCO__c), KB_Exit_Code_Description_enUS__c,KB_Exit_Code_Description_esCO__c), &apos;es_PA&apos;, IF(ISBLANK(Hsvc_KBExitCodeDescriptionPanama__c), KB_Exit_Code_Description_enUS__c,Hsvc_KBExitCodeDescriptionPanama__c),&apos;es_AR&apos;, IF(ISBLANK(Hsvc_KBExitCodeDescriptionArgentina__c), KB_Exit_Code_Description_enUS__c,Hsvc_KBExitCodeDescriptionArgentina__c), KB_Exit_Code_Description_enUS__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>KB Exit Code Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KB_Exit_Code_Description_enUS__c</fullName>
        <label>KB Exit Code Description_enUS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KB_Exit_Code_Description_esCO__c</fullName>
        <description>Description of KB Exit Code.
Ex: Change of Account Ownership, Complimentary Restore Tokens, etc.</description>
        <label>KB Exit Code Description_esCO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_Active__c</fullName>
        <description>To find out whether or not a KB Exit Code is Active</description>
        <formula>IF( AND( Effective_Date__c &lt;= TODAY(), Expiry_Date__c &gt; TODAY()),True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <label>KB Exit Code</label>
    <nameField>
        <label>KB Exit Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KB Exit Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ExitCodeDescriptionNotBlank</fullName>
        <active>true</active>
        <description>This validation checks that all of the description field should not be empty.</description>
        <errorConditionFormula>((KB_Exit_Code_Description_esCO__c ==NULL ||KB_Exit_Code_Description_esCO__c ==&apos;&apos;) &amp;&amp;  (KB_Exit_Code_Description_enUS__c ==NULL || KB_Exit_Code_Description_enUS__c ==&apos;&apos;))</errorConditionFormula>
        <errorMessage>Please enter value in atleast One description field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ExpiryDateCannotBeSetUpInPast</fullName>
        <active>true</active>
        <description>This validation rule ensures that the expiry date is set in future and is greater that the effective date</description>
        <errorConditionFormula>OR(Expiry_Date__c &lt; TODAY(),Expiry_Date__c &lt; Effective_Date__c)</errorConditionFormula>
        <errorDisplayField>Expiry_Date__c</errorDisplayField>
        <errorMessage>Expiry Date cannot be set in past and cannot be less than the effective date.</errorMessage>
    </validationRules>
</CustomObject>